[package]
name = "web-assembly-image-processing"
version = "0.1.0"
edition = "2021"

[lib]
# produce a crate, ie. package, with support for external languages
crate-type = ["cdylib"] 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
